@@ -1,3 +1,0 @@
-30 atomic
-50 home
-80 multi
