@@ -1,26 +1,0 @@
-partman-auto/text/home_scheme ::
-
-8 1 1 boot-prep
-	$primary{ }
-	$bootable{ }
-	method{ prep } .
-
-500 4000 7000 ext3
-	$primary{ }
-	method{ format }
-	format{ }
-	use_filesystem{ }
-	filesystem{ ext3 }
-	mountpoint{ / } .
-
-64 512 300% linux-swap
-	method{ swap }
-	format{ } .
-
-100 10000 1000000000 ext3
-	method{ format }
-	format{ }
-	use_filesystem{ }
-	filesystem{ ext3 }
-	mountpoint{ /home } .
-
